; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_kex.c_kex_protocol_error.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_kex.c_kex_protocol_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssh = type { i32 }

@.str = private unnamed_addr constant [35 x i8] c"kex protocol error: type %d seq %u\00", align 1
@SSH2_MSG_UNIMPLEMENTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, %struct.ssh*)* @kex_protocol_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kex_protocol_error(i32 %0, i8* %1, %struct.ssh* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ssh*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store %struct.ssh* %2, %struct.ssh** %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @error(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %9, i8* %10)
  %12 = load %struct.ssh*, %struct.ssh** %7, align 8
  %13 = load i32, i32* @SSH2_MSG_UNIMPLEMENTED, align 4
  %14 = call i32 @sshpkt_start(%struct.ssh* %12, i32 %13)
  store i32 %14, i32* %8, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %25, label %16

16:                                               ; preds = %3
  %17 = load %struct.ssh*, %struct.ssh** %7, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @sshpkt_put_u32(%struct.ssh* %17, i8* %18)
  store i32 %19, i32* %8, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %25, label %21

21:                                               ; preds = %16
  %22 = load %struct.ssh*, %struct.ssh** %7, align 8
  %23 = call i32 @sshpkt_send(%struct.ssh* %22)
  store i32 %23, i32* %8, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %21, %16, %3
  %26 = load i32, i32* %8, align 4
  store i32 %26, i32* %4, align 4
  br label %28

27:                                               ; preds = %21
  store i32 0, i32* %4, align 4
  br label %28

28:                                               ; preds = %27, %25
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @error(i8*, i32, i8*) #1

declare dso_local i32 @sshpkt_start(%struct.ssh*, i32) #1

declare dso_local i32 @sshpkt_put_u32(%struct.ssh*, i8*) #1

declare dso_local i32 @sshpkt_send(%struct.ssh*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
